gphoto: Set mtime when pulling

Commit 86162bbe4b09 ("gphoto2: Implement pull support") failed to set
the modification time of the destination file when implementing pull
support.

Fix this by setting the modification time on the destination file (only
the mtime in seconds needs to be set since this is the only time info
the gphoto supports).

https://bugzilla.gnome.org/show_bug.cgi?id=733469